# fastapi-soap

./: .gitignore  LICENCE  README.md  pyproject.toml
example/: main.py  schema.py  webservice.py
fastapi_soap/: __init__.py  exceptions.py  models.py  request.py  response.py  routes.py  wsdl.py
